--- a/Challenge-2/index.html
+++ b/Challenge-2/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coding-Challenges</title>
+    <title>Coding-Challenge-2</title>
 </head>
 <body>
-    <h1>Coding-Challenges</h1>
+    <h1>Coding-Challenge2</h1>
     <script src="script.js"></script>
 </body>
 </html>
